// Vitest Snapshot v1

exports[`InfoColumn > No props 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
/>
`;

exports[`InfoColumn > no button 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <h3
      class="border border-detail text-dark select-none py-2 px-3 text-sm font-bold"
    >
      Info!
    </h3>
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn > with button 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <h3
      class="border border-detail text-dark select-none py-2 px-3 text-sm font-bold"
    >
      Info!
    </h3>
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
      <button
        type="button"
      >
        Submit
      </button>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn > with info and meta fields 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <h3
      class="border border-detail text-dark select-none py-2 px-3 text-sm font-bold"
    />
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn > with infoFields 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <h3
      class="border border-detail text-dark select-none py-2 px-3 text-sm font-bold"
    />
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn > with metaFields 1`] = `
<section
  class="md:-mr-75 md:w-70 sticky top-2.5 mt-2.5 mr-0 w-full md:float-right"
>
  <aside
    class="border border-detail mb-5 box-border block shadow"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;
